# SparrowOS

./: .gitignore  .gitmodules  CMakeLists.txt  VMtest.sh  build_bootloader.sh  draft.txt  ds_token_key.txt  init.ld  initramfs_config.json  kld.ld  ksorted.txt  ksorted_sym.txt  kspace_vm_table_test  ksymbols.txt  ksymbols_sorted.txt  onekey_local_test.sh  operation_log_dump  sudo_gdb.sh  symbols_dumper  test_set_dump  tmp.txt
Docs/: 2026-05-31_worklog.md  FreePagesAllocatorDoc.txt  Init_page_allocator.md  KERNEL_DISCIPLINE.md  ModuleErrorTree.md  PC16550D时序分析与UART优化.md  buf.tmp  error_code_struct_doc.txt  i8042_first_subscriber_char_buffer_design.md  i8042_keyboard_event_pipeline_design.md  init_protocal.txt  kshell_README.md  kshell_add_command_guide.md  kshell_commands_modularization.md  kshell_firmware_system_commands_design.md  kshell_framework_design.md  kshell_i8042_keyboard_commands_design.md  kshell_implementation_summary.md  kshell_internationalization.md  kshell_interrupt_system_commands_design.md  kshell_kernel_symbol_commands_design.md  kshell_line_editor_based_on_text_input_event.md  kshell_memory_operations_design.md  kshell_pcie_observe.md  kshell_quick_reference.md  kshell_usage_guide.md  kshell_x86_architecture_commands_design.md  ravenfs_design.md  ravenfs_vm_setup.md  runtime_env.md  text_input_event_pipeline_design.md
Docs/Debug/: debug_infra_decision_log_draft.md  kvm_gdb_debug_notes.md
Docs/Memory/: 2026-06-06-TLB-shootdown-v3-IPI-重构.md  BCB_docv2.txt  BCB_docv3.md  BCB_foundation.md  BCB_foundation_v4draft.txt  BCB_v4.md  FPAPollutionModel.md  FreePagesAllocatorDoc.txt  HCB_v3.md  HCB_v4.md  HCB空闲回收线程设计草案.txt  LRU_SWAP设计演进记录.md  MemoryModuleDocv1.txt  MemoryModuleDocv3.1.txt  MemoryModuleDocv4.txt  MemoryModuleTransition_v1_to_v2.txt  MemoryModuleTransition_v2_to_v3.txt  PCId_tlbshutdown_modle.txt  TLB_shootdown_PCID_model_implementation.md  page_v2设计演进记录.md  vm_interval_redesign_retro.md
Docs/Panic/: Panic_Memory_Broadcast.md
Docs/Sched/: block_queue_spec.md  block_scenarios_analysis.md  priv_stack_layout.md  rb_tree_map_feasibility.md  task_state_machine.mmd  中断与调度器设计改进草案.txt  创建就绪解耦与WorkerPool草案.md
Docs/Sched_and_int/: 2026-06-30_Bqs_container_history.md  DTS_Scheduler_Upgrade_Plan.md  block_queue_spec.md  block_queue归一化.md  task_v2设计.md  task_v3设计.md  中断与调度器设计改进草案.txt
Docs/init_v2/: declarative_init_draft.md  init_protocal_v2.1_specification.md  init_protocal_v2_initelf_specification.md  initelf_world_measurement_and_handoff.md  vm_interval_phase2_1_worklog_2026-05-19.md
Docs/initramfs/: example_config.json  initramfs_mkconfig.md  initramfs_specification.md
Docs/kmods_plan/: kmods_config_plan.md  kmods_frame.md  kmods_framework.md
Docs/ravenfs/: disk_layout_v0.md  disk_layout_v1.md  raven_toolchain.md
build_utils/: ksymbols_dumper  ksymbols_dumper.cpp
build_utils/initramfs_builder/: CMakeLists.txt  builder.cpp  builder.hpp  main.cpp
src/: KImage_Introspection.cpp  kernel_entry.asm  kinit.cpp  time.cpp
src/Processor/: fixed_interrupt_resources.cpp  local_processor_manage.cpp
src/arch/x86_64/Interrupts/: CMakeLists.txt  Sysdef_exception_entries.asm  exceptions_handler.cpp  interrupt_kshell_commands.cpp  x86_vecs_deliver_mgr.cpp
src/arch/x86_64/Processor/: APs_bringup.cpp  CMakeLists.txt  cmpxchg16b.asm  early_bsp_resources.cpp  fast_get_ids.asm  fixed_interrupt_resources.cpp  gs_complex_load_gdt_tss.cpp  local_processor_manage.cpp  runtime_processor_regist.asm
src/arch/x86_64/core_hardwares/NVMe/: CMakeLists.txt  Identify_cmd.cpp  NVMe_init_and_shutdown.cpp  NVMe_init_thread.cpp  NVMe_interrupts.cpp  NVMe_kshell.cpp  NVMe_utils.cpp  PRPs.cpp  get_set_features.cpp  io_fdw.cpp  io_queue_cmd.cpp  io_rwc.cpp
src/arch/x86_64/core_hardwares/PCIe/: CMakeLists.txt  PCIe.cpp  pcie_kshell_commands.cpp
src/arch/x86_64/core_hardwares/i8042/: CMakeLists.txt  i8042.cpp  i8042_char_subscriber.cpp  i8042_kshell.cpp  i8042_text_input_subscriber.cpp
src/arch/x86_64/core_hardwares/x86_arch/: CMakeLists.txt  DMAR.cpp  HPET.cpp  PortDriver.cpp  device_interrupt_handlers_bare_enter.asm  ioapic.cpp  lapic.cpp  primitive_gop.cpp  pt_blackbox.cpp  rtc.cpp  tsc.cpp  x86_kshell_commands.cpp
src/core_hardwares/: HPET.cpp  PortDriver.cpp  lapic.cpp
src/firmware/: APIC_convert_functions.cpp  CMakeLists.txt  UefiRtKshell.cpp  UefiRunTimeServices.cpp  acpimgr.cpp  uefi_kshell_commands.cpp
src/fs/: Makefile
src/include/: KImage_Introspection.h  block_device.h  elf.h  exec_env_detect.h  global_controls.h  kcirclebufflogMgr.h  kintrin.h  ktime.h  linker_symbols.h  panic.h
src/init/: heap_alloc.cpp  info_fill.cpp  init_entry.asm  init_heap_v3.cpp  init_init.cpp  initramfs_lookup.cpp  kernel_load.cpp  kernel_mmu.cpp  mem_loads.cpp  page_allocator.cpp  pages_alloc.cpp  panic.cpp
src/kmods/: out_symbols_mgr.cpp
src/memory/: AddresSpace.cpp  CMakeLists.txt  FreePagesAllocator.cpp  FreePagesAllocator_BCB.cpp  FreePagesAllocator_BCB.cpp.with_cache  KspacMapMgr.cpp  KspacMapMgr_pagediretct_operate.cpp  Makefile  PhyAddrAccessor.cpp  all_pages_arr.cpp  cmake_install.cmake  kpoolmemmgr.cpp  kpoolmemmgr_HCBv2.cpp  kpoolmemmgr_HCBv3.cpp  mem_kshell_commands.cpp  mixed_bitmap.cpp  out_surfaces.cpp
src/scheduler/: CMakeLists.txt  bq_system.cpp  kthread_interfaces.cpp  per_processor_scheduler.cpp  task.cpp  task_pool.cpp  yield.asm
src/tests/: BCB_foundation_comparison.cpp  BCB_foundation_test  BCB_foundation_test.cpp  BCB_test  BCB_test.cpp  benchmark_triple  benchmark_triple.cpp  bsp_kout_stub.cpp  kdeps_stubs.cpp  kspace_vm_table_test.cpp  netty_simulator.h  panic_stub.cpp  pcie_enumeration.cpp  stub_kout.cpp  test_memmodule.cpp  trace_bcb  trace_bcb.cpp  trace_bcb2.cpp  v3_simulator.h
src/utils/: BCB_fnd_DeepFirst.cpp  BCB_fnd_ShallowFirst.cpp  BuddyControlBlock_foundation.cpp  bitmap.cpp  int128_div.cpp  kcirclebufflogMgr.cpp  kintrin.cpp  kout.cpp  kptrace.cpp  kshell.cpp  kshell_commands_regist.cpp  kshell_commans_regist.cpp  (+3 more)
test_set/: phy_instance_1.json
user_utils/: nvme_dev_switch.md  nvme_dev_switch.sh  sync_to_vm.sh  vm_gdb_attach.sh
(+137 files in other folders)
